@@ -185,7 +185,6 @@ tools/ocaml-objcopy-macosx text eol=lf
 tools/ocamlsize text eol=lf
 tools/pre-commit-githook text eol=lf
 tools/markdown-add-pr-links.sh text eol=lf
-runtime/caml/compatibility.h typo.long-line=may
 runtime/caml/sizeclasses.h typo.missing-header typo.white-at-eol
 
 # These are all Perl scripts, so may not actually require this
